2011-05-17  Andreas Kling  <kling@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        Area element doesn't update region when dynamically altered.
        https://bugs.webkit.org/show_bug.cgi?id=54636

        * fast/images/imagemap-dynamic-area-updates-expected.txt: Added.
        * fast/images/imagemap-dynamic-area-updates.html: Added.
        * fast/images/script-tests/imagemap-dynamic-area-updates.js: Added.
        (setArea):
        (checkForArea):
2011-05-17  Andreas Kling  <kling@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        Area element doesn't update region when dynamically altered.
        https://bugs.webkit.org/show_bug.cgi?id=54636

        Recompute the clickable region after the "shape" or "coords" attribute
        of an area element is changed.

        Test: fast/images/imagemap-dynamic-area-updates.html

        * html/HTMLAreaElement.cpp:
        (WebCore::HTMLAreaElement::parseMappedAttribute):
        (WebCore::HTMLAreaElement::invalidateCachedRegion):
        * html/HTMLAreaElement.h:


Canonical link: https://commits.webkit.org/76341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86695 268f45cc-cd09-0410-ab3c-d52691b4dbfc